- issue #12303 Avoid typecasting to float when not needed
- issue #12425 Duplicate message variable names in messages.inc.php
- issue #12399 Adding index to table shows wrong top navigation
- issue #12424 Fixed password change on MariaDB without auth plugin
- issue #12339 Do not error on unset server port
- issue #12422 Improvements to the original theme

4.6.3 (2016-06-23)
- issue #12249 Fixed cookie path on Windows
- issue #12279 Fixed error reporting on connect problems
- issue #12290 Fixed export of tables without explicitly set engine
- issue #12285 Designer JavaScript error: Show/Hide tables list
- issue #12293 Fix MySQL SSL connection with some PHP versions
- issue #12279 Fix MySQL connection error on version mismatch
- issue #12281 Keep user attributes (privileges, authentication mode, etc) when copying a user
- issue #12308 Fix division by zero in case of misconfigured MySQL server
- issue #12317 Fix editing server variables
- issue #12303 Fix table size calculation in some circumstances
- issue #12310 Fix listing routines for non privileged user
- issue        Escape generated query in exporting a database
- issue        Setup script doesn't use input type 'password' in all relevant locations
- issue        [security] BBCode injection in setup script, see PMASA-2016-17
- issue        [security] Cookie attribute injection attack, see PMASA-2016-18
- issue        Redirect loop when directly calling url.php
- issue        [security] SQL injection attack, see PMASA-2016-19
- issue        [security] XSS attack in Table Structure page, see PMASA-2016-20
- issue        [security] XSS attack in Server Privileges page, see PMASA-2016-21
- issue        [security] DOS attack vulnerability, see PMASA-2016-22
- issue        [security] Multiple full path disclosure vulnerabilities, see PMASA-2016-23
- issue        [security] Full path disclosure when running in debug mode
- issue        [security] XSS attack with partition range and table structure, see PMASA-2016-25